--- a/app/elements/header-bar/header-bar.html
+++ b/app/elements/header-bar/header-bar.html
@@ -1,19 +1,25 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../../elements/small-item/small-item.html">
 
 <dom-module id="header-bar">
 	<template>
 
 		<style is="custom-style">
 			:host{ diplay: block; }
-			#mainContent { display: flex; background-color: red; height: 30%;}
-			/*:host{ display:block; height: 100%; background-color: red;}
-			--paper-scroll-header-panel-full-header: {background-color:red;};
-			paper-toolbar { height: 299px; }*/
+			#mainContent { 
+				display: flex; 
+				flex-direction: row;
+				justify-content: space-around;
+				align-items: center;;
+				background-color: red; 
+				height: 30%; 
+			}
 		</style>
 
 		<div id="mainContent">
-			adfaf
+			<template is="dom-repeat" items="{{_toArray(elements)}}">      
+				<small-item description="{{item.name}}"></small-item>
+			</template>
 		</div>
 
 		
