--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -18,6 +18,11 @@
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
 
+<!-- Styles -->
+<!-- <link rel="import" href="../styles/app-theme.html"> -->
+<link rel="import" href="../styles/shared-styles.html">
+
 <!-- Add your elements here -->
 <link rel="import" href="header-bar/header-bar.html">
 <link rel="import" href="scroll-content/scroll-content.html">
+<link rel="import" href="big-item/big-item.html">
