Change to use paper components

--- a/app/elements/big-item/big-item.html
+++ b/app/elements/big-item/big-item.html
@@ -4,7 +4,7 @@
 	<template>
 
 		<style is="custom-style">
-			:host{ 
+			/*:host{ 
 				opacity: 0.9; 
 				background-color: #0B486B;
 				cursor: pointer;
@@ -12,8 +12,8 @@
 				padding: 15%; 
 				margin: 2%;   
 				text-align: center;
-				color: white;
-			};
+				color: 
+			};*/
 			:host(:hover){
 				box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 				margin: 5%;       
