--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -8,7 +8,7 @@
 		app.baseUrl = app.baseUrl || '/';
 
 		page(app.baseUrl, function() {
-			app.route = 'home';
+			app.route = 0;
 		});
 
 		// 404
