Change components and styles

--- a/app/elements/big-item/big-item.html
+++ b/app/elements/big-item/big-item.html
@@ -4,20 +4,10 @@
 	<template>
 
 		<style is="custom-style">
-			/*:host{ 
-				opacity: 0.9; 
-				background-color: #0B486B;
-				cursor: pointer;
-				transition: all 400ms ease-in-out;
-				padding: 15%; 
-				margin: 2%;   
-				text-align: center;
-				color: 
-			};*/
-			:host(:hover){
-				box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-				margin: 5%;       
-				padding: 16%; 
+			:host{ 
+				display: block;
+				height: 100%;
+				width: 100%;
 			};
 		</style>
 
