Add transition animation

--- a/app/elements/day-content/day-content.html
+++ b/app/elements/day-content/day-content.html
@@ -16,10 +16,10 @@
 				width: 100%;
 			}
 		</style>
-		
+	
 		<div id="container">
-			<left-content name={{name}}></left-content>
-			<right-content name={{name}}></right-content>    
+			<left-content selected="[[selected]]" id=[[id]] name=[[name]]></left-content>
+			<right-content selected="[[selected]]" id=[[id]] name=[[name]]></right-content>    
 		</div>
 
 	</template>
