--- a/app/elements/header-bar/header-bar.html
+++ b/app/elements/header-bar/header-bar.html
@@ -11,7 +11,9 @@
 				background: url("../../images/header_bar_background.jpg");
 				background-repeat: no-repeat;
     			background-attachment: fixed;
-    			background-position: center top; 
+    			background-position: right top; 
+    			background-size: cover;
+    			filter: blur(13px);
 			}
 			paper-tabs{
 				height: 80%;			
@@ -33,6 +35,8 @@
     			height: 300px;
     		}
 			a{
+				color: white;
+				text-shadow: 1px 2px 3px #565656;
 				text-decoration: none;
 				display: flex;
 			    justify-content:center;
