--- a/app/elements/right-content/right-content.html
+++ b/app/elements/right-content/right-content.html
@@ -14,7 +14,7 @@
 			    align-content:center;
 			    flex-direction:column; 
     		};	
-    		#container{
+    		#hero{
     			font-size: 50px;
 				border: 2px solid black;
 				text-align: center;
@@ -23,7 +23,7 @@
     		}
 		</style>
 		
-		<div id="container">
+		<div id="hero">
 			{{name}}
 		</div>
 
